syntax = "proto3";

package chat_v2;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/vbulash/chat-server/pkg/chat_v2;chat_v2";

service ChatV2 {
  rpc CreateSend(CreateSendRequest) returns (CreateSendResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc Change(ChangeRequest) returns (google.protobuf.Empty);
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
}

message UserIdentity {
  int64 id = 1;
  string name = 2;
  string email = 3;
}

message ChatInfo {
  repeated UserIdentity recipients = 1;
  string text = 2;
}

message Chat {
  int64 id = 1;
  ChatInfo info = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}

message CreateSendRequest {
  repeated UserIdentity recipients = 1;
  string text = 2;
}

message CreateSendResponse {
  int64 id = 1;
}

message GetRequest {
  int64 id = 1;
}

message GetResponse {
  int64 id = 1;
  repeated UserIdentity recipients = 2;
  string text = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message ChangeRequest {
  int64 id = 1;
  repeated UserIdentity recipients = 2;
  string text = 3;
}

message DeleteRequest {
  int64 id = 1;
}
